--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "d": "tauri dev"
   },
   "dependencies": {
+    "@douyinfe/semi-icons-lab": "^2.54.1",
+    "@douyinfe/semi-ui": "^2.54.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
@@ -18,7 +20,9 @@
     "@mui/material": "^5.15.13",
     "@tauri-apps/api": "^1.5.3",
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-router": "^6.22.3",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
